--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Number Checker</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="The numbers checker" content="">
+  <meta name="numchk" content="">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -32,9 +33,27 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+         <section class="header" style="margin-top: 10%">
+                <div class="value-props row">
+                  <div class="four columns value-prop">
+                    <img class="value-img" src="images/42.svg"><br/>
+                    The
+                  </div>
+                  <div class="four columns value-prop">
+                    <img class="value-img" src="images/100.svg"><br/>
+                    Numbers
+                  </div>
+                  <div class="four columns value-prop">
+                    <img class="value-img" src="images/21.svg"><br/>
+                    Are Coming..
+                  </div>
+                </div>
+              </section>
+
+
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Starter</h4>
+      <div class="one-half column" style="margin-top: 10%">
+        <h4>NumChk</h4>
         <p>Start of numchk - the numbers checker. see what's in and behind a number.</p>
         <p>info@numchk.com</p>
       </div>
