--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+  <!-- scripts
+  <script src="js/site.js"></script>
+  <script src="js/jquery.min.js"></script>
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+
 </head>
 <body>
 
@@ -36,15 +42,15 @@
          <section class="header" style="margin-top: 10%">
                 <div class="value-props row">
                   <div class="four columns value-prop">
-                    <img class="value-img" src="images/42.svg"><br/>
+                    <img class="value-img" src="img/42.svg"><br/>
                     The
                   </div>
                   <div class="four columns value-prop">
-                    <img class="value-img" src="images/100.svg"><br/>
+                    <img class="value-img" src="img/100.svg"><br/>
                     Numbers
                   </div>
                   <div class="four columns value-prop">
-                    <img class="value-img" src="images/21.svg"><br/>
+                    <img class="value-img" src="img/21.svg"><br/>
                     Are Coming..
                   </div>
                 </div>
