--- a/404.html
+++ b/404.html
@@ -8,10 +8,10 @@
 <p>404 - page not found </p>
 
 <div style="display:inline;background-color:white;padding:10px;" >
-  <a href="/" ><img id="logo" src="" alt="sMoreMail" style="border: none;"/><br/>
+  <a href="/img/mstile-150x150.png" ><img id="logo" src="" alt="numchk" style="border: none;"/><br/>
 
 
-  <div style="text-align:center;color:darkblue;background-color:white;">Toast Your Inbox</div> </a>
+  <div style="text-align:center;color:darkblue;background-color:white;">find some new numbers</div> </a>
 </div>
 
 
