--- a/404.html
+++ b/404.html
@@ -5,10 +5,11 @@
 
 
 <body>
-<p>404 - page not found </p>
+  <div style="text-align:center; background-color:white;padding:10px;" >
+  <p>404 - page not found </p>
 
-<div style="display:inline;background-color:white;padding:10px;" >
-  <a href="/img/mstile-150x150.png" ><img id="logo" src="" alt="numchk" style="border: none;"/><br/>
+
+  <a href="/" ><img id="logo" src="img/mstile-150x150.png" alt="numchk" style="border: none;"/>
 
 
   <div style="text-align:center;color:darkblue;background-color:white;">find some new numbers</div> </a>
