--- a/404.html
+++ b/404.html
@@ -4,11 +4,14 @@
 </head>  
 
 
+
 <body>
   <div style="text-align:center; background-color:white;padding:10px;" >
   <p>404 - page not found </p>
 
-
+<script>
+  document.URL
+</script>
   <a href="/" ><img id="logo" src="img/mstile-150x150.png" alt="numchk" style="border: none;"/>
 
 
