--- a/404.html
+++ b/404.html
@@ -9,8 +9,10 @@
   <div style="text-align:center; background-color:white;padding:10px;" >
   <p>404 - page not found </p>
 
+  <p id="demo"></p>
+  
 <script>
-  document.URL
+  document.getElementById("demo").innerHTML = document.URL;
 </script>
   <a href="/" ><img id="logo" src="img/mstile-150x150.png" alt="numchk" style="border: none;"/>
 
