--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   <div style="text-align:center; background-color:white;padding:10px;" >
   <p>was the 404 - page but has been hijacked for your pleasure </p>
 
-  <h1>You came  here from: <p id="demo"></p></h1>
+  <h1>You came  here from: <a id="demo"></a></h1>
   
 <script>
   document.getElementById("demo").innerHTML = document.URL.substr(document.URL.lastIndexOf("/")+1);
