--- a/404.html
+++ b/404.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132187606-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-132187606-1');
+</script>
+
     <script type="text/javascript" src="js/pajhome_md5.js"></script>
     <script type="text/javascript" src="js/pajhome_sha1.js"></script>
     <script type="text/javascript" src="js/pajhome_sha256.js"></script>
