--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <h4>NumChk</h4>
         <p>Start of numchk - the numbers checker. see what's in and behind a number.</p>
         <p>info@numchk.com</p>
+        <p>interesting pages: <A href="sitemap.html">sitemap</A></p>
       </div>
     </div>
   </div>
