--- a/sitemap.html
+++ b/sitemap.html
@@ -25,5 +25,14 @@ Interesting pages<br>
 <A href="555666">555666</A><br>
 <A href="777888">777888</A><br>
 <A href="888999">888999</A><br>
+<A href="new888999">888999</A><br>
+<A href="new2888999">888999</A><br>
+<A href="new3888999">888999</A><br>
+<A href="#1234">888999</A><br>
+<A href="#2345">888999</A><br>
+<A href="#3456">888999</A><br>
+<A href="#6789">888999</A><br>
+
+
 </body>
 </html>
