--- a/sitemap.html
+++ b/sitemap.html
@@ -28,8 +28,8 @@ Interesting pages<br>
 <A href="new888999">888999</A><br>
 <A href="new2888999">888999</A><br>
 <A href="new3888999">888999</A><br>
-<A href="#1234">#1234</A><br>
-<A href="#2345">#2345</A><br>
+<A href="/#1234">#1234</A><br>
+<A href="/#2345">#2345</A><br>
 <A href="#3456">#3456</A><br>
 <A href="#6789">#6789</A><br>
 
