--- a/200.html
+++ b/200.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
-<script>top.location = document.URL.substr(document.URL.lastIndexOf("/")+1);</script>
+<script>//top.location = "/#" + document.URL.substr(document.URL.lastIndexOf("/")+1);</script>
+<script>window.location.href= "/#" + document.URL.substr(document.URL.lastIndexOf("/")+1);</script>
 </body>
 </html>
