--- a/100.html
+++ b/100.html
@@ -34,7 +34,7 @@
           }    
           </script>
           <input type="button" value="Change site" onClick="newSite()" />
-          <iframe id="myIframe" src="http://getprismatic.com/" onLoad="iframeDidLoad();"width=98% height=800px></iframe>
+          <iframe id="myIframe" src="/#345" onLoad="iframeDidLoad();"width=98% height=800px></iframe>
 
 
 <script src="js/2.js"></script>
