--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         <p>Start of numchk - the numbers checker. see what's in and behind a number.</p>
         <p>info@numchk.com</p>
         <p>interesting pages: <A href="sitemap.html">sitemap</A></p>
+        <h1>You came  here from: <a id="demo"></a></h1>
+  
+        <script>
+          document.getElementById("demo").innerHTML = document.URL.substr(document.URL.lastIndexOf("/")+1);
+        </script>
       </div>
     </div>
   </div>
