--- a/sitemap.html
+++ b/sitemap.html
@@ -32,6 +32,7 @@ Interesting pages<br>
 <A href="/#2345">#2345</A><br>
 <A href="#3456">#3456</A><br>
 <A href="#6789">#6789</A><br>
+<A href="200.html">200.html</A><br>
 
 
 </body>
