--- a/200.html
+++ b/200.html
@@ -7,15 +7,11 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-132187606-1');
 </script>
-<script src="js/1.js">
-</script>
-
 </head>
 <body>
-<script>//top.location = "/#" + document.URL.substr(document.URL.lastIndexOf("/")+1);</script>
-<script>window.location.href= "/#" + document.URL.substr(document.URL.lastIndexOf("/")+1);</script>
+    javascript required for redirect page load
+    <script>window.location.href= "/#" + document.URL.substr(document.URL.lastIndexOf("/")+1);</script>
 </body>
 </html>
