--- a/sitemap.html
+++ b/sitemap.html
@@ -13,25 +13,25 @@
 </head>
 <body>
 Interesting pages<br>
-<A href="349">349</A><br>
-<A href="666">666</A><br>
-<A href="1000">1000</A><br>
-<A href="1234">1234</A><br>
-<A href="25465">25465</A><br>
-<A href="66666">666666</A><br>
-<A href="123456">123456</A><br>
-<A href="1000000">1000000</A><br>
-<A href="333444">333444</A><br>
-<A href="555666">555666</A><br>
-<A href="777888">777888</A><br>
-<A href="888999">888999</A><br>
-<A href="new888999">888999</A><br>
-<A href="new2888999">888999</A><br>
-<A href="new3888999">888999</A><br>
-<A href="/#1234">#1234</A><br>
-<A href="/#2345">#2345</A><br>
-<A href="#3456">#3456</A><br>
-<A href="#6789">#6789</A><br>
+<A href="?349">349</A><br>
+<A href="?666">666</A><br>
+<A href="?1000">1000</A><br>
+<A href="?1234">1234</A><br>
+<A href="?25465">25465</A><br>
+<A href="?66666">666666</A><br>
+<A href="?123456">123456</A><br>
+<A href="?1000000">1000000</A><br>
+<A href="?333444">333444</A><br>
+<A href="?555666">555666</A><br>
+<A href="?777888">777888</A><br>
+<A href="?888999">888999</A><br>
+<A href="?new888999">888999</A><br>
+<A href="?new2888999">888999</A><br>
+<A href="?new3888999">888999</A><br>
+<A href="/?#1234">?#1234</A><br>
+<A href="/?#2345">?#2345</A><br>
+<A href="?3456">#3456</A><br>
+<A href="?6789">#6789</A><br>
 <A href="200.html">200.html</A><br>
 
 
