--- a/sitemap.html
+++ b/sitemap.html
@@ -33,6 +33,9 @@ Interesting pages<br>
 <A href="?3456">#3456</A><br>
 <A href="?6789">#6789</A><br>
 <A href="200.html">200.html</A><br>
+<A href="/ssn/416-01-xxxx.html">416-01-xxxx</A><br>
+<A href="/ssn/416-02-xxxx.html">416-02-xxxx</A><br>
+<A href="/ssn/416-03-xxxx.html">416-03-xxxx</A><br>
 
 
 </body>
