--- a/ssn/416-02-xxxx.html
+++ b/ssn/416-02-xxxx.html
@@ -12,7 +12,7 @@
 </script>
 </head>
 <body>
-SSN 416-02-xxxx from Alabama given out from 1976 to unknown. Estimated age of a person with this number is 47-59 years old.<br>
+SSN 416-02-xxxx from Alabama given out from 1976 to unknown. Estimated age of a person with this number is 47-59 years old.<br><Br><br>
 
 <div id="list">
     <!-- list displays here -->
@@ -25,7 +25,7 @@ SSN 416-02-xxxx from Alabama given out from 1976 to unknown. Estimated age of a 
         if (i<1000){text +=0;}
         if (i<100){text +=0;}
         if (i<10){text +=0;}
-        text += i + "<br>";
+        text += i + " ";
         
        }
 document.getElementById('list').innerHTML = text;
