--- a/ssn/416-02-xxxx.html
+++ b/ssn/416-02-xxxx.html
@@ -10,12 +10,52 @@
 
   gtag('config', 'UA-132187606-1');
 </script>
+<!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Number Checker - SSN - Alabama - 1976 - 30% active</title>
+  <meta name="The numbers checker" content="">
+  <meta name="numchk" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– 
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">-->
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/skeleton.css">
+  <link rel="stylesheet" href="../css/custom.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="../img/favicon.png">
 </head>
 <body>
-SSN 416-02-xxxx from Alabama given out from 1976 to unknown. Estimated age of a person with this number is 47-59 years old.<br><Br><br>
+    <div class="container" style="margin-top: 0%">
+            <div class="nine columns">
 
-<div id="list">
-    <!-- list displays here -->
+            <a href="/"><img src="../img/trim256.png"><br>&nbsp;&nbsp;&nbsp;&nbsp;NumChk Home</a>
+            </div>
+            <div class="three columns">
+            <h1><br>SSN</h1>  
+        </div>
+        <div class="row"></div>
+        <h2>Social Security Number Detailed analysis</h2><hr>
+        </div>
+    </div>
+           
+       <div class="container" style="margin-top: 0%">
+    SSN 416-02-xxxx from Alabama given out from 1976 to unknown. Estimated age of a person with this number is 47-59 years old.
+    <div class="row">
+        <div style="margin-top: 0%"><hr>
+                The 9,999 valid Social Security Numbers in the <b>416-02 block</b> are generated client side on your device with JavaScript saving <b>120kB</b> to store and transfer this file. By displaying this list it allows search engines (and you) to find this page.<br><br>
+            <div id="list">
+        <!-- list displays here -->
 </div>
 <script>
     var text = "";
@@ -30,6 +70,6 @@ SSN 416-02-xxxx from Alabama given out from 1976 to unknown. Estimated age of a 
        }
 document.getElementById('list').innerHTML = text;
 </script>
-
+</div></div></div>
 </body>
 </html>
