--- a/ssn/416-02-xxxx.html
+++ b/ssn/416-02-xxxx.html
@@ -42,13 +42,13 @@
             <a href="/"><img src="../img/trim256.png"><br>&nbsp;&nbsp;&nbsp;&nbsp;NumChk Home</a>
             </div>
             <div class="four columns value-prop">
-            <img src="../img/ssn-250.jpg" >
+            <img src="../img/ssnold-blur-250.jpg" >
             </div>
             <div class="four columns value-prop">
             <h1><br>SSN</h1>  
         </div>
         <div class="row"></div>
-        <h2>Social Security Number Detailed analysis</h2><hr>
+        <h2>Social Security Number Detailed Analysis</h2><hr>
         </div>
     </div>
            
@@ -56,8 +56,8 @@
     SSN 416-02-xxxx from Alabama given out from 1976 to unknown. Estimated age of a person with this number is 47-59 years old.
     <div class="row">
         <div style="margin-top: 0%"><hr>
-                The 9,999 valid Social Security Numbers in the <b>416-02 block</b> are generated client side on your device with JavaScript saving <b>480kB</b> to store and transfer this file. By displaying this list it allows search engines (and you) to find this page.<br><br>
-                <b>Number Forms:</b><br>
+                Four (4) forms of the 9,999 valid Social Security Numbers in the <b>416-02 block</b> are generated client side on your device with JavaScript saving <b>480kB</b> to store and transfer this file. By displaying this list it allows search engines (and you) to find this page.<br><br>
+                <b>Number Forms in the list below:</b><br>
                 416-02-xxxx is the valid form with '-' separators<br>
                 406 02 xxxx is often used with space separation<br>
                 406.02.xxxx is usage with '.' separator<Br>
