--- a/sitemap.html
+++ b/sitemap.html
@@ -35,6 +35,7 @@ Interesting pages<br>
 <A href="200.html">200.html</A><br>
 <A href="/ssn/416-01-xxxx.html">416-01-xxxx</A><br>
 <A href="/ssn/416-02-xxxx.html">416-02-xxxx</A><br>
+<A href="/ssn/416-02-xxxy.html">416-02-xxxy dev page</A><br>
 <A href="/ssn/416-03-xxxx.html">416-03-xxxx</A><br>
 
 
