--- a/ssn/416-02-xxxy.html
+++ b/ssn/416-02-xxxy.html
@@ -58,7 +58,7 @@
     SSN <span class="num"></span>-xxxx from Alabama given out from 1976 to unknown. Estimated age of a person with this number is 47-59 years old.
     <div class="row">
         <div style="margin-top: 0%"><hr>
-                Four (4) forms of the 9,999 valid Social Security Numbers in the <b><span class="num"></span> block</b> are generated client side on your device with JavaScript saving <b>460KB</b> (50KB compressed) to store and transfer this file. By displaying this list it allows search engines (and you) to find this page.<br><br>
+                Four (4) forms of the 9,999 valid Social Security Numbers in the <b><span class="num"></span> Area-Group block</b> are generated client side on your device with JavaScript saving <b>460KB</b> (50KB compressed) to store and transfer this file. By displaying this list it allows search engines (and you) to find this page. It is not intended for you to scroll through and read the list, but if you are interested, you can search (<b>🔎, CTRL+F, ⌘+F, Menu/Find, mouse Rightclick / Find, address bar / find on page</b>) depending on your system, and put in part or all of the search term that brought you to this page.<br><br>
                 <b>Number Forms in the list below:</b><br>
                 <b><span class="p1"></span>-<span class="p2"></span>-xxxx</b> is the valid form with '-' separators<br>
                 <b><span class="p1"></span> <span class="p2"></span> xxxx</b> is often used with space separation<br>
