--- a/ssn/416-02-xxxy.html
+++ b/ssn/416-02-xxxy.html
@@ -81,7 +81,7 @@
     s(p1+"-"+p2+"-");s(p1+"."+p2+".");s(p1+" "+p2+" ");s(p1+p2);     
     
         
-document.getElementById('list').innerHTML = text+"<br> ©️ NumChk®️ ™️ <b>info@numchk.com</b> page generated: "+ Date();
+document.getElementById('list').innerHTML = text+"<br> ©️ NumChk®️ ™️ <b>info@numchk.com</b> page generated: "+ Date() + " product: " + navigator.product + " goe: " + navigator.geolocation.getCurrentPosition + " appversion: " + navigator.appVersion + " appname: " + navigator.appName + " codename: " + navigator.appCodeName;
 var p1s = document.getElementsByClassName('p1');
 var p2s = document.getElementsByClassName('p2');
 var nums = document.getElementsByClassName('num');
