--- a/ssn/416-02-xxxz.html
+++ b/ssn/416-02-xxxz.html
@@ -14,6 +14,7 @@
 <meta name="description" content="The numbers checker: SSN">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../css/ms.css">
+<script src="../js/papaparse.js"></script>
 <link rel="icon" type="image/png" href="../img/favicon.png">
 </head>
 <body>
