--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 <script>
   document.getElementById("demo").innerHTML = document.URL.substr(document.URL.lastIndexOf("/")+1);
 </script>
-  <a href="/" ><img id="logo" src="img/mstile-150x150.png" alt="numchk" style="border: none;"/>
+  <a href="/" ><img id="logo" src="/img/mstile-150x150.png" alt="numchk" style="border: none;"/>
 
 
   <div style="text-align:center;color:darkblue;background-color:white;">find some new numbers</div> </a>
