--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
         <h4>NumChk</h4>
-        <p>Start of numchk - the numbers checker. see what's in and behind a number.</p>
+        <p>Social Security SSN <A href="ssn/about/">data</A> or <A href="ssn/500-23-xxxx.html">example</A></p>
         <p>info@numchk.com</p>
         <p>interesting pages: <A href="sitemap.html">sitemap</A></p>
-        <h1>You came  here from: <a id="demo"></a></h1>
+        You came  here from: <a id="demo"></a>
   
         <script>
           document.getElementById("demo").innerHTML = document.URL.substr(document.URL.lastIndexOf("/")+1);
