--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
         <h4>NumChk</h4>
-        <p>Social Security SSN <A href="ssn/about/">data</A> or <A href="ssn/500-23-xxxx.html">example</A></p>
+        <p>Social Security SSN <A href="ssn/articles/">data</A> or <A href="ssn/500-23-xxxx.html">example</A></p>
         <p>info@numchk.com</p>
         <p>interesting pages: <A href="sitemap.html">sitemap</A></p>
         You came  here from: <a id="demo"></a>
