--- a/index.html
+++ b/index.html
@@ -54,29 +54,28 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+ 
   <div class="container">
-         <section class="header" style="margin-top: 10%">
-                <div class="value-props row">
-                  <div class="four columns value-prop">
-                    <img class="value-img" src="img/42.svg"><br/>
-                    The
+      <div class="section categories">
+    <section class="header" style="margin-top: 0%">
+           <h1>NumChk</h1>
+                <div class="value-props row" style="margin-top: 0%; margin-bottom: 0% ">
+                  <div class="four columns value-prop" style="margin-bottom: 0%">
+                      The<br><img class="value-img" src="img/42.svg">
+                    
                   </div>
                   <div class="four columns value-prop">
-                    <img class="value-img" src="img/100.svg"><br/>
-                    Numbers
+                    Numbers<br><img class="value-img" src="img/100.svg">
                   </div>
                   <div class="four columns value-prop">
-                    <img class="value-img" src="img/21.svg"><br/>
-                    Are Coming..
-                  </div>
+                    Are Coming...<Br><img class="value-img" src="img/21.svg">
                 </div>
-              </section>
+              </section></div>
 
-
+              
     <div class="row">
-      <div class="column" style="margin-top: 5%">
-        <h4>NumChk</h4>
-        <p><b>Social Security Number</b> SSN <A href="ssn/232-92-xxxx.html">example </A>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11>
+      <div class="column" style="margin-top: 1%">
+          <p><b>Social Security Number</b> SSN <A href="ssn/232-92-xxxx.html">example </A>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11>
         <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'></p>
         <p>interesting pages: <A href="sitemap.html">sitemap</A>  (4MB)</p>
         <p>contact: <a href="mailto:info@numchk.com">info@numchk.com</a></p>
