--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                 </div>
               </section></div>
 
-              
+        <br>      
     <div class="row">
       <div class="column" style="margin-top: 1%">
           <p><b>Social Security Number</b> SSN <A href="ssn/232-92-xxxx.html">example </A>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11>
         <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'></p>
-        <p>interesting pages: <A href="sitemap.html">sitemap</A>  (4MB)</p>
+        <p>List Pages: <A href="sitemap.html">SSN sitemap</A>  (4MB)</p>
         <p>contact: <a href="mailto:info@numchk.com">info@numchk.com</a></p>
        </div>
     </div>
