--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         <br>      
     <div class="row">
       <div class="column" style="margin-top: 1%">
-          <p><b>Social Security Number</b> SSN <A href="ssn/232-92-xxxx.html">example </A>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11>
-        <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'></p>
+          <p><b>Social Security Number</b> SSN <A href="ssn/232-92-xxxx.html">example </A>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11><input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-450M-Issued.html">450M SSN Issued</a>
+      
+        </p>
         <p>List Pages: <A href="sitemap.html">SSN sitemap</A>  (4MB)</p>
         <p>contact: <a href="mailto:info@numchk.com">info@numchk.com</a></p>
        </div>
