--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
           <p><b>Social Security Number</b> SSN <A href="ssn/232-92-xxxx.html">example </A>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11><input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br> 
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-450M-Issued.html">SSN 450M Issued</a><br>
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnstates.html">SSN Blocks by State</a><br><br>
+            &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/parsing-death-master-db.html">SSN Parsing Death Master Database with Perl</a><br><br>
+           
             <b>About</b><Br>
               NumChk analyzes different types of widely used numbers for the purpose of identifying patterns and revealing underlying information that may be intentionally or unintentional encoded in the number and how it is used.  Many industry experts in these specific domains know these things, but it is not widely available to the public until now.  The work done at NumChk ensures the public has access to the same base knowledge that large institutions, governments, regulators and industry experts have and is often exploited in information asymmetry and can be used against you without you knowing.  By sharing the data contained in a number, NumChk gives you access to information that others may use to unfairly target you or information about you - and now you know how.
       
