--- a/404.html
+++ b/404.html
@@ -23,9 +23,10 @@
 
 <body>
   <div style="text-align:center; background-color:white;padding:10px;" >
-  <p>was the 404 - page but has been hijacked for your pleasure </p>
+  <p><h1>404 Page not found</h1> </p>
 
-  <h1>You came  here from: <a id="demo"></a></h1>
+  <h1>You came  here from: <a id="demo"></a></h1><br>
+  
   
 <script>
   document.getElementById("demo").innerHTML = document.URL.substr(document.URL.lastIndexOf("/")+1);
@@ -33,7 +34,7 @@
   <a href="/" ><img id="logo" src="/img/mstile-150x150.png" alt="numchk" style="border: none;"/>
 
 
-  <div style="text-align:center;color:darkblue;background-color:white;">find some new numbers</div> </a>
+  <div style="text-align:center;color:darkblue;background-color:white;">NumChk home</div> </a>
 </div>
 
 
