--- a/404.html
+++ b/404.html
@@ -22,6 +22,7 @@
 
 
 <body>
+  <div class="container">
   <div style="text-align:center; background-color:white;padding:10px;" >
   <p><h1>404 Page not found</h1> </p>
 
@@ -36,7 +37,7 @@
 
   <div style="text-align:center;color:darkblue;background-color:white;">NumChk home</div> </a>
 </div>
-
+</div>
 
 
 </body>
