--- a/404.html
+++ b/404.html
@@ -23,6 +23,7 @@
 
 <body>
   <div class="container">
+      <div class="section categories">
       <section class="header" style="margin-top: 0%">
   <div style="text-align:center; background-color:white;padding:10px;" >
   <p><h1>404 Page not found</h1> </p>
@@ -37,8 +38,8 @@
 
 
   <div style="text-align:center;color:darkblue;background-color:white;">NumChk home</div> </a>
-</div>
-</section>
+</div></section></div>
+
 </div>
 
 
