--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <br>      
     <div class="row">
       <div class="column" style="margin-top: 1%">
-          <p><b>Social Security Number</b> SSN <A href="ssn/232-92-xxxx.html">example </A>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11><input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br> 
+          <p><b>Social Security Number</b> SSN <b>232-92-xxxx.html </b>>>analyzed from 10GB of <A href="ssn/articles/">data</A>  <input type='text' id='link_id' placeholder="078-05-1120" size=11><input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br> 
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-450M-Issued.html">SSN 450M Issued</a><br>
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnstates.html">SSN Blocks by State</a><br>
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/parsing-death-master-db.html">SSN Parsing Death Master Database with Perl</a><br><br>
