--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-issued-by-state.html">SSN Blocks by State compared to population</a><br><br>
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNYears.html">SSN Significant events by year</a><br><br>
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNPresidents.html">SSN Presidents thoughts</a><br><br>
+            &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-High-Group.html">SSN High Group</a><br><br>
+            
             
 
             <b>About</b><Br>
