--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNYears.html">SSN Significant events by year</a><br>
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNPresidents.html">SSN Presidents thoughts</a><br>
             &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-High-Group.html">SSN High Group</a><br>
+            &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-Card.html">SSN Card through history</a><br>
             
             
 
