--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </p>
         <p>List Pages:<br> 
         <a href="/sitemap.txt">sitemap</a><br>
+        <a href="/sitemaporig.html">SSN orig 90k records</a><br>
         <a href="/sitemap-nossn1.txt">SSN noindex1</a><br>
         <a href="/sitemap-nossn2.txt">SSN noindex2</a><br>
 
