--- a/index.html
+++ b/index.html
@@ -130,5 +130,8 @@
                       
         location.href = "ssn/" + dthree + "-" + dtwo + "-xxxx.html";
       };</script>
+      <!-- Amazon Publisher Studio -->
+<script> var amzn_ps_tracking_id = "numchk-20"; </script> 
+<script async="true" type="text/javascript" src="//ps-us.amazon-adsystem.com/scripts/US/studio.js"></script>
 </body>
 </html>
