--- a/book/caltech.html
+++ b/book/caltech.html
@@ -61,17 +61,17 @@
           <div class="row"><div style="margin-top: 0%">
                   <img src="" width=100%><br>
 
-APh/MS 105C. States of Matter.	978-1-107-06724-0 <br>
+APh/MS 105C. States of Matter.	978-1-107-06724-0 
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=1107067243&asins=1107067243&linkId=382fb4a71c0ca031cc8d989fcb6de7a6&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
-</iframe>
+</iframe><br><Br>
 
-Art070. Traditions of Japanese Art.	1717780245 <br>
+Art070. Traditions of Japanese Art.	1717780245
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=1717780245&asins=1717780245&linkId=3ba5bd337bfa2a04b571086ecaefa434&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
-</iframe>
+</iframe><br><Br>
 
-Ay 102. Physics of the Interstellar Medium.	978-3-662-05866-4  <br>
+Ay 102. Physics of the Interstellar Medium.	978-3-662-05866-4
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=3540433627&asins=3540433627&linkId=7264e75988d7c63e572ead9f0e98e35f&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
-</iframe>
+</iframe><br><Br>
 
 Ay 102. Physics of the Interstellar Medium.	978-1-891389-46-7 <br>
 Ay 102. Physics of the Interstellar Medium.	978-0-521-82634-9 <br>
@@ -205,6 +205,7 @@ SS 222C. Econometrics.	978-0-262-23258-6 <br>
   
         </div>
       </div>
+    </div>
     </div>
   
   <!-- End Document
