--- a/book/caltech.html
+++ b/book/caltech.html
@@ -206,6 +206,7 @@ SS 222C. Econometrics.	978-0-262-23258-6 <br>
         </div>
       </div>
     </div>
+    </div>
     
   
   <!-- End Document
