--- a/book/caltech.html
+++ b/book/caltech.html
@@ -21,7 +21,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>NumChk: SSN Dataset State analysis - Guam, Philippines</title>
+  <title>NumChk: Caltech textbook list</title>
   <meta name="The numbers checker" content="">
   <meta name="numchk" content="">
 
@@ -60,7 +60,9 @@
       <div class="container" style="margin-top: 0%">
           <div class="row"><div style="margin-top: 0%" text-align:center;> 
                   <img src="" width=100%><br>
-                  <h1>Caltech textbook list</h1><b>
+The textbook list for caltech - 2019 shows the typical savings one receives by ordering through amazon instead of the local bookstore. Scan the list to find the best books and cheapest prices for your class.<br><br>
+                  
+                  <b>
 
 APh/MS 105C. States of Matter.	978-1-107-06724-0 <br>
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=1107067243&asins=1107067243&linkId=382fb4a71c0ca031cc8d989fcb6de7a6&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
@@ -310,7 +312,7 @@ SS 222C. Econometrics.	978-0-262-23258-6 <br> <br><br></b>
   <A href="../' + randompage3 + "-" + randompage2 + '-xxxx.html"><h1>SSN</h1>random SSN</a>\
   </div>\
   <div class="row" align=center>\
-  <h2>NumChk SSN Dataset State analysis</h2><hr>\
+  <h2>Caltech textbook list</h2><hr>\
   </div></div>'; 
      
       //top replace
